--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,97 +1,13 @@
-/* Homepage Handlebars Section */
-/* ========================================================================= */
-  /* Style for the menu container */
- 
-  .menu-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 50px;
-  }
-
-  /* Style for the card header */
-  .card-header {
-    background-color: #f9f9f9;
-    padding: 20px;
-    border-radius: 10px;
-    margin-bottom: 30px;
-    text-align: center;
-  }
-
-  /* Style for the food container */
-  .food {
-    background-color: #ffffff;
-    padding: 10px;
-    border-radius: 10px;
-    margin-bottom: 20px;
-    text-align: center;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
-  }
-
-  /* Style for the customer container */
-  .col-md-7 {
-    background-color: #f9f9f9;
-    padding: 10px;
-    border-radius: 10px;
-    margin-bottom: 20px;
-    text-align: center;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
-  }
-
-  /* Style for the add food container */
-  .add-food-container {
-    background-color: #f9f9f9;
-    padding: 20px;
-    border-radius: 10px;
-    margin-top: 30px;
-    text-align: center;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
-  }
-
-  /* Style for the form label */
-  label {
-    display: block;
-    font-size: 18px;
-    margin-bottom: 10px;
-  }
-
-  /* Style for the form input and textarea */
-  input[type='text'],
-  textarea {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-    margin-bottom: 20px;
-    box-sizing: border-box;
-  }
-
-  /* Style for the submit button */
-  button[type='submit'] {
-    background-color: #4CAF50;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    font-size: 18px;
-    cursor: pointer;
-  }
-
-  /* Style for the submit button on hover */
-  button[type='submit']:hover {
-    background-color: #3e8e41;
-  }
-  :root {
-    --primary: #389393;
-    --secondary: #f5a25d;
-    --tertiary: #fa7f72;
-    --quatrinary: #6c6b67;
-    --light: #ebebeb;
-    --dark: #182c23;
-    --error: rgb(228, 46, 1);
-    --border-radius: 0.3rem;
-  }
+:root {
+  --primary: #000b0b;
+  --secondary: #8d735e;
+  --tertiary: #23297d;
+  --quatrinary: #cebc77;
+  --light: #ebebeb;
+  --dark: #182c23;
+  --error: rgb(93, 120, 124);
+  --border-radius: 0.3rem;
+}
   
   body {
     font-family: Arial;
