remove udate for futute dev

--- a/views/all.handlebars
+++ b/views/all.handlebars
@@ -70,15 +70,20 @@
       </label>
       <br />
       <br />
-      <button type="submit" value="Submit">
+      <button type="submit" value="Submit" class="submit">
         submit
       </button>
-
-  <button type="submit" value="update">
+{{!-- <button type="submit" value="Submit" class="update">
         update
-      </button>
+      </button> --}}
+  
     </form>
   </div>
 </div>
 
+
+
+
 <script src="/js/add-dish.js"></script>
+
+<script src="/js/edit-dish.js"></script>
