--- a/views/dish.handlebars
+++ b/views/dish.handlebars
@@ -61,7 +61,7 @@
       Check if this is to go
     </label>
     <br />
-    <button type="submit" value="Submit">
+    <button type="submit" value="Submit" class="update">
       Submit
     </button>
   </form>
